Compilator/compiladordataform/src/Logica/AnalizadorLexico.java
/* Generated By:JavaCC: Do not edit this line. AnalizadorLexico.java */
package Logica;
import java.util.*;
public class AnalizadorLexico implements AnalizadorLexicoConstants {
   private static Hashtable ST= new Hashtable();
   private static String resultado="";
   static int numero = 0;
   static String ambito="";
   private static void grabarLexema (int n, String token,  String lexema, int nL, int nC) {
      System.out.printf("%-35s%-20s%-10s%-10s\u005cn",n + "- Lexema:" + lexema, "\u0009Token: "+  token , "\u0009Linea: "+ nL , "\u0009Columna: " + nC);
   }

   private static void grabarDatosPieza(int n, String token, Token pieza) {
      grabarLexema(n, token, pieza.image, pieza.beginLine, pieza.beginColumn );
   }

        public static String getResultado() {
          if(resultado.equals(""))
          resultado="No se han encontrado errores en el analisis";
          return resultado;
        }
        public static void setResultado(String a) {
          resultado=a;
        }
   public static Hashtable getSymbolTable() {
      return  ST;
   }

   public static void reportarError(String mensaje) {
     resultado+="Error Semantico en la seccion "+ ambito+"\u005cn"+mensaje+"\u005cn\u005cn";
   }

   public static void validarDeclaracionEstilo(String componente,String estilo, String valor) {
        if(estilo.equals("width")|estilo.equals("height")|estilo.equals("Tama\u00f1oFuente"))
        {
          if(!valor.equals("Tama\u00f1o")) {
                reportarError("Se esperaba un Tama\u00f1o en px para definir la propiedad " + estilo+" del componente "+ componente);
          };
        }
        else if(estilo.equals("EstiloColor")) {
         if(!valor.equals("Color")) {
                reportarError("Se esperaba un Color Hexadecimal para definir el " + estilo +" del componente "+ componente);
         };
        }else if(estilo.equals("Fuente")) {
          if(!valor.equals("Fuente")) {
                reportarError("Se esperaba una Fuente de letra para definir la " + estilo +" del componente "+ componente);
          };
        }else if(estilo.equals("EstiloFuente")) {
          if(!valor.equals("EstiloFuente")) {
                reportarError("Se esperaba un Estilo de fuente (bold, italic) para definir el " + estilo +" del componente "+ componente);
          };
        }

   }


   public static void validarDeclaracion(String token, String estilo) {
     SymbolTable simbolo=(SymbolTable) ST.get(token);
     if(simbolo!=null) {
       String tipo=simbolo.getTipo();
       if(tipo.equals("Tabla")){
         if(!(estilo.equals("width")||estilo.equals("height")))
         {
           reportarError("el Componente "+ token+ " es una tabla y no puede tener asigandos valores distintos a width o height");
           return;
         };
           };
           if (tipo.equals("Patron")){
           reportarError("el Componente "+ token+ "  es un Patron y no puede tener elementos de estilos asociados a el");
                   return;
           };
           if (tipo.equals("Variable")) {
             reportarError("el Componente "+ token+ "  es una Variable y no puede tener estilos asociados");
             return;
           };
     }
   };
   public AnalizadorLexico() {}

  public static void main(String args []) throws ParseException
  {

        try
        {
           java.io.InputStream inputstream = new java.io.FileInputStream("src/archivoPrueba.shtml");
       System.out.println("-------------------------------- Iniciando An\u00e1lisis L\u00e9xico para el archivo archivoPrueba ----------------------------");
       AnalizadorLexico parser = new AnalizadorLexico(inputstream);
           parser.Programa();


           System.out.println("------------------------------------------------ Fin de an\u00e1lisis L\u00e9xico -------------------------------------------------");
           System.out.println("no se han hallado errores l\u00e9xicos");
       String temp;
        SymbolTable temp2;
                Enumeration t = ST.keys();

     while ( t.hasMoreElements() == true ) {

          temp = (String)t.nextElement();
          temp2 = (SymbolTable)ST.get(temp);
          System.out.println(temp);
          if ( temp2.tipo != null )
            System.out.println(" type = " + temp2.tipo);
          if ( temp2.valor != null )
            System.out.println(" value = " + temp2.valor);

    }


    }catch(TokenMgrError te)
        {
           System.err.println("Error");
           System.err.println(te.getMessage());

        }
    catch(ParseException e)
        {
           System.out.println("Analizador: Se han encontrado errores en el analisis.");
           System.out.println(e.getMessage());
        }
        catch (java.io.FileNotFoundException e) {
                System.out.println("El archivo especificado no se encuentra o no se puede leer");
        }
  }

  static final public void Programa() throws ParseException {
          ST.clear();
    declaraciones();
    expresionFinal();
    widgets();
  }

  static final public void widgets() throws ParseException {
                  ambito = "Widtget";
    jj_consume_token(INICIOWIDGET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORIENTACION:
    case IDENTIFICADOR:
    case COMBOBOX:
    case CAMPOTEXTO:
    case LABEL:
    case BOTON:
    case PATRON:
    case 42:
      sentencias();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(FINWIDGET);
  }

  static final public void declaraciones() throws ParseException {
                        ambito="Declaracion";
    jj_consume_token(INICIODECLARACION);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORIENTACION:
    case IDENTIFICADOR:
    case COMBOBOX:
    case CAMPOTEXTO:
    case LABEL:
    case BOTON:
    case PATRON:
    case 42:
      sentencias();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(FINDECLARACION);
  }

  static final public void expresionFinal() throws ParseException {
                         ambito="Expresion";
    jj_consume_token(INICIOEXPRESION);
    sentencias();
    jj_consume_token(FINEXPRESION);
  }

  static final public void sentencias() throws ParseException {
    sentencia();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORIENTACION:
    case IDENTIFICADOR:
    case COMBOBOX:
    case CAMPOTEXTO:
    case LABEL:
    case BOTON:
    case PATRON:
    case 42:
      sentencias();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
  }

  static final public void sentencia() throws ParseException {
    try {
      if (jj_2_1(2)) {
        ListaComponentes();
        jj_consume_token(PUNTOYCOMA);
      } else if (jj_2_2(2)) {
        declaracion();
        jj_consume_token(PUNTOYCOMA);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ORIENTACION:
        case IDENTIFICADOR:
        case COMBOBOX:
        case CAMPOTEXTO:
        case LABEL:
        case BOTON:
        case PATRON:
        case 42:
          asignacion();
          jj_consume_token(PUNTOYCOMA);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
    resultado+="Error en: "+ambito+"\u005cn"+e.toString()+"\u005cn";
    Token t;
    do {
      t = getNextToken();
    } while (t.kind != PUNTOYCOMA);
    }
  }

  static final public void Interfaz() throws ParseException {
 Token tkn;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      tkn = jj_consume_token(IDENTIFICADOR);
                       ST.put(tkn.image,new SymbolTable("INTERFAZ",tkn.image));
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORIENTACION:
      jj_consume_token(ORIENTACION);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(ABRIRLLAVE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORIENTACION:
    case IDENTIFICADOR:
    case COMBOBOX:
    case CAMPOTEXTO:
    case LABEL:
    case BOTON:
    case PATRON:
    case 42:
      ListaComponentes();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(CERRARLLAVE);
  }

  static final public void ListaComponentes() throws ParseException {
    Componente();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEPARADOR:
      jj_consume_token(SEPARADOR);
      ListaComponentes();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  static final public String Componente() throws ParseException {
 Token tkn;
 String aux;
    if (jj_2_3(2)) {
      aux = Contenedor();
                    {if (true) return aux;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CAMPOTEXTO:
        tkn = jj_consume_token(CAMPOTEXTO);
                                                      ST.put(tkn.image,new SymbolTable("Campo de Texto",tkn.image)); {if (true) return tkn.image;}
        break;
      default:
        jj_la1[8] = jj_gen;
        if (jj_2_4(2)) {
          aux = Tabla();
                                                                                                                                                                   {if (true) return aux;}
        } else if (jj_2_5(2)) {
          aux = Atributo();
                                                                                                                                                                                                              {if (true) return aux;}
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMBOBOX:
            tkn = jj_consume_token(COMBOBOX);
                                                                                                                                                                                                                                             ST.put(tkn.image,new SymbolTable("ComboBox",tkn.image)); {if (true) return tkn.image;}
            break;
          case BOTON:
            tkn = jj_consume_token(BOTON);
                  ST.put(tkn.image,new SymbolTable("Boton",tkn.image));{if (true) return tkn.image;}
            break;
          case LABEL:
            tkn = jj_consume_token(LABEL);
                                                                                                         ST.put(tkn.image,new SymbolTable("Label",tkn.image));{if (true) return tkn.image;}
            break;
          case PATRON:
            tkn = jj_consume_token(PATRON);
                   ST.put(tkn.image,new SymbolTable("Patron",tkn.image));{if (true) return tkn.image;}
            break;
          case IDENTIFICADOR:
            tkn = jj_consume_token(IDENTIFICADOR);
                                                                                                                  if(ST.get(tkn.image)==null) reportarError("la Variabe: "+tkn.image+" No esta declarada previamente");{if (true) return tkn.image;}
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String Contenedor() throws ParseException {
                      Token tkn;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      tkn = jj_consume_token(IDENTIFICADOR);
                        ST.put(tkn.image,new SymbolTable("Contenedor",tkn.image));
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORIENTACION:
      jj_consume_token(ORIENTACION);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(42);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORIENTACION:
    case IDENTIFICADOR:
    case COMBOBOX:
    case CAMPOTEXTO:
    case LABEL:
    case BOTON:
    case PATRON:
    case 42:
      ListaComponentes();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(43);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case HIDEBORDER:
      jj_consume_token(HIDEBORDER);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
                                                                                                                                                 {if (true) return "contendor";}
    throw new Error("Missing return statement in function");
  }

  static final public String Tabla() throws ParseException {
                 Token tkn;
    tkn = jj_consume_token(IDENTIFICADOR);
                        ST.put(tkn.image,new SymbolTable("Tabla",tkn.image));
    jj_consume_token(SIMBOLOMENOR);
    Columnas();
    jj_consume_token(SIMBOLOMAYOR);
                                                                                                                               {if (true) return tkn.image;}
    throw new Error("Missing return statement in function");
  }

  static final public String Atributo() throws ParseException {
                    Token tkn;
    tkn = jj_consume_token(IDENTIFICADOR);
                        ST.put(tkn.image,new SymbolTable("Atributo",tkn.image));
                                                                                    {if (true) return tkn.image;}
    throw new Error("Missing return statement in function");
  }

  static final public void Columnas() throws ParseException {
                  Token tkn;
    tkn = jj_consume_token(IDENTIFICADOR);
                        ST.put(tkn.image,new SymbolTable("Columna",tkn.image));
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEPARADOR:
      jj_consume_token(SEPARADOR);
      Columnas();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  static final public void declaracion() throws ParseException {
                     Token tkn;
    tkn = jj_consume_token(IDENTIFICADOR);
                        ST.put(tkn.image,new SymbolTable("Variable",tkn.image));
    jj_consume_token(SIMBOLOASIGNACION);
    ListaComponentes();
  }

  static final public void asignacion() throws ParseException {
                   String token;String estilo;String valor;
    token = Componente();
    estilo = propiedadesComponentes();
                                                     validarDeclaracion(token,estilo);
    jj_consume_token(SIMBOLOASIGNACION);
    valor = valor();
                                                                                                                           validarDeclaracionEstilo(token,estilo,valor);
  }

  static final public String propiedadesComponentes() throws ParseException {
                                  Token tkn;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ESTILOWIDTH:
      tkn = jj_consume_token(ESTILOWIDTH);
                    {if (true) return "width";}
      break;
    case ESTILOHEIGHT:
      tkn = jj_consume_token(ESTILOHEIGHT);
                     {if (true) return "height";}
      break;
    case ESTILOCOLOR:
      tkn = jj_consume_token(ESTILOCOLOR);
                    {if (true) return "EstiloColor";}
      break;
    case ESTILOTIPOFUENTE:
      tkn = jj_consume_token(ESTILOTIPOFUENTE);
                         {if (true) return "Fuente";}
      break;
    case ESTILOTAMFUENTE:
      tkn = jj_consume_token(ESTILOTAMFUENTE);
                        {if (true) return "Tama\u00f1oFuente";}
      break;
    case ESTILOFUENTE:
      tkn = jj_consume_token(ESTILOFUENTE);
                     {if (true) return "EstiloFuente";}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String valor() throws ParseException {
                 Token tkn;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLORHEXADECIMAL:
      jj_consume_token(COLORHEXADECIMAL);
                      {if (true) return "Color";}
      break;
    case BOLD:
      jj_consume_token(BOLD);
          {if (true) return "EstiloFuente";}
      break;
    case ITALIC:
      jj_consume_token(ITALIC);
              {if (true) return "EstiloFuente";}
      break;
    case NUMERO:
      jj_consume_token(NUMERO);
      jj_consume_token(PX);
                  {if (true) return "Tama\u00f1o";}
      break;
    case ARIAL:
      jj_consume_token(ARIAL);
          {if (true) return "Fuente";}
      break;
    case TAHOMA:
      jj_consume_token(TAHOMA);
            {if (true) return "Fuente";}
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3R_2() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(SIMBOLOASIGNACION)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_1()) return true;
    if (jj_scan_token(PUNTOYCOMA)) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_1()) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(SIMBOLOMENOR)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  static private boolean jj_3R_3() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_8()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(6)) jj_scanpos = xsp;
    if (jj_scan_token(42)) return true;
    xsp = jj_scanpos;
    if (jj_3R_9()) jj_scanpos = xsp;
    if (jj_scan_token(43)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_2()) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_scan_token(SEPARADOR)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(PATRON)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(BOTON)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) {
    jj_scanpos = xsp;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(LABEL)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_1() {
    if (jj_3R_6()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_7()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(CAMPOTEXTO)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(COMBOBOX)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public AnalizadorLexicoTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[17];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x3f040,0x3f040,0x3f040,0x3f040,0x1000,0x40,0x3f040,0x80000,0x4000,0x3b000,0x1000,0x40,0x3f040,0x0,0x80000,0xf8000000,0x4000780,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x400,0x400,0x400,0x400,0x0,0x0,0x400,0x0,0x0,0x0,0x0,0x0,0x400,0x8,0x0,0x1,0x4,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[5];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public AnalizadorLexico(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public AnalizadorLexico(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new AnalizadorLexicoTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
